{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "Moving",
            "id": "4134a4e1-d693-4070-9187-f137f2851b0a",
            "actions": [
                {
                    "name": "movement",
                    "type": "Value",
                    "id": "9f01cba2-6cf3-4944-9e37-20e0fc5edf12",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "running",
                    "type": "Button",
                    "id": "b3cfab6c-63b3-4672-aed7-b35af29afdc6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "fa9cbf7b-012f-4a86-b372-8ecdd05c2c4c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "63840216-054d-4edd-84c5-c183e9311e50",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e13814c6-480d-45c6-bff5-3f0436175077",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "bc12db24-82e9-41d6-aec4-87399b113e7f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "6197633d-6c90-420e-90e7-c30a2670fce7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "8b598b3c-478b-44bf-8fdc-00b0931dabdf",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "running",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "kick",
            "id": "49a3292c-6d38-4a59-a4fd-c2bb624d1c50",
            "actions": [
                {
                    "name": "Kick",
                    "type": "Button",
                    "id": "627e5e9d-94f6-4230-b3d2-f99f0fe48939",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Grab",
                    "type": "Button",
                    "id": "0e4a023d-a7e3-4556-a7ef-38efe9b2858c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "92309b0b-30a8-4b4d-be8a-5a43f2b0bd68",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Kick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "897b0de3-99cc-445a-a918-a6c02782639a",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Grab",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}